--- a/package.json
+++ b/package.json
@@ -9,8 +9,11 @@
         "url": "https://github.com/makepanic/bookr"
     },
     "bugs": "https://github.com/makepanic/bookr/issues",
-    "engines": ["node"],
+    "engines": [
+        "node"
+    ],
     "dependencies": {
+        "express": "3.x",
         "q": "~0.9.7",
         "lodash": "~2.2.1",
         "request": "~2.27.0",
