--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "request": "~2.27.0",
     "nconf": "~0.6.7",
     "bookr-crawler": "git+ssh://git@github.com:makepanic/bookr-crawler.git#master",
-    "aws-sdk": "~1.10.0"
+    "mongodb": "~1.3.19"
   },
   "devDependencies": {
     "grunt-neuter": "~0.6.0",
