--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "lodash": "~2.2.1",
     "request": "~2.27.0",
     "nconf": "~0.6.7",
-    "bookr-crawler": "git+ssh://git@github.com:makepanic/bookr-crawler.git#master",
+    "bookr-crawler": "git://github.com/makepanic/bookr-crawler.git#master",
+    "paraclete": "git://github.com/makepanic/paraclete.git#registry",
     "mongodb": "~1.3.19"
   },
   "devDependencies": {
