--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "nconf": "~0.6.7",
     "bookr-crawler": "git://github.com/makepanic/bookr-crawler.git#superBook",
     "paraclete": "git://github.com/makepanic/paraclete.git#master",
-    "mongodb": "~1.3.19"
+    "mongodb": "~1.3.19",
+    "isbn": "git://github.com/makepanic/isbnjs.git#gh-pages"
   },
   "devDependencies": {
     "grunt-neuter": "~0.6.0",
