--- a/package.json
+++ b/package.json
@@ -27,6 +27,8 @@
     "grunt-neuter": "~0.6.0",
     "grunt": "~0.4.1",
     "grunt-contrib-watch": "~0.5.3",
-    "grunt-contrib-concat": "~0.3.0"
+    "grunt-contrib-concat": "~0.3.0",
+    "grunt-eslint": "git://github.com/makepanic/grunt-eslint.git#master",
+    "grunt-contrib-nodeunit": "~0.2.2"
   }
 }
