--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "grunt-contrib-watch": "~0.5.3",
     "grunt-contrib-concat": "~0.3.0",
     "grunt-eslint": "git://github.com/makepanic/grunt-eslint.git#master",
-    "grunt-contrib-nodeunit": "~0.2.2"
+    "grunt-contrib-nodeunit": "~0.2.2",
+    "grunt-cli": "~0.1.11"
   }
 }
