--- a/package.json
+++ b/package.json
@@ -18,7 +18,6 @@
     "lodash": "~2.2.1",
     "request": "~2.27.0",
     "nconf": "~0.6.7",
-    "bookr-crawler": "git://github.com/makepanic/bookr-crawler.git#master",
     "paraclete": "git://github.com/makepanic/paraclete.git#master",
     "mongodb": "~1.3.19",
     "isbn": "git://github.com/makepanic/isbnjs.git#gh-pages"
@@ -28,7 +27,7 @@
     "grunt": "~0.4.1",
     "grunt-contrib-watch": "~0.5.3",
     "grunt-contrib-concat": "~0.3.0",
-    "grunt-eslint": "git://github.com/makepanic/grunt-eslint.git#master",
+    "grunt-eslint": "~0.2.0",
     "grunt-contrib-nodeunit": "~0.2.2",
     "grunt-cli": "~0.1.11"
   }
