--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "lodash": "~2.2.1",
     "request": "~2.27.0",
     "nconf": "~0.6.7",
+    "bookr-crawler": "git://github.com/makepanic/bookr-crawler.git#master",
     "paraclete": "git://github.com/makepanic/paraclete.git#master",
     "mongodb": "~1.3.19",
     "isbn": "git://github.com/makepanic/isbnjs.git#gh-pages"
